new file:   Untitled.ipynb 	modified:   docs/01/lab.ipynb 	modified:   docs/02/lab.ipynb 	modified:   docs/02/notes.ipynb 	modified:   docs/03/lab.ipynb 	modified:   docs/03/notes.ipynb 	modified:   docs/03/sol.ipynb 	modified:   docs/04/lab.ipynb 	modified:   docs/04/notes.ipynb

--- a/docs/03/lab.ipynb
+++ b/docs/03/lab.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "2",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3",
    "metadata": {},
    "outputs": [
@@ -485,10 +485,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2b48a825",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/bash: ffmpeg: command not found\n"
+     ]
+    }
+   ],
    "source": [
     "! rm -rf movie.mpg && ffmpeg -i plots/%04d.png -qmax 2 movie.mpg"
    ]
@@ -505,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "27",
    "metadata": {},
    "outputs": [],
@@ -517,21 +525,26 @@
     "k = 1.0     # spring constant\n",
     "\n",
     "# Frequencies for two normal modes\n",
-    "Omega = np.array([...]) # this should become a numpy array\n",
+    "Omega = np.array([np.sqrt(k/m), np.sqrt(3*k/m)]) # this should become a numpy array\n",
     "\n",
     "# Initial conditions\n",
-    "X0 = np.array([...]) # this should become a numpy array\n",
+    "X0 = np.array([0,0.5]) # this should become a numpy array\n",
     "\n",
     "# The analytical solution in matrix notation:\n",
     "def X_matrix(t):\n",
-    "    M0 = ... # apply an transformation to rewrite the transformation in terms of eigenvectors\n",
+    "    M0 = ([\n",
+    "        [1/2, 1/2],\n",
+    "        [1/2, -1/2]\n",
+    "     ]) @ X0 # apply an transformation to rewrite the transformation in terms of eigenvectors\n",
     "    M = M0 * np.cos(Omega * t)\n",
-    "    return ... # apply an inverse transformation to rewrite the modes in terms of x1 and x2"
+    "    return np.array([[1,1],\n",
+    "                     [1,-1]\n",
+    "                     ]) @ M # apply an inverse transformation to rewrite the modes in terms of x1 and x2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "28",
    "metadata": {},
    "outputs": [],
@@ -540,20 +553,20 @@
     "\n",
     "# Coupling matrix\n",
     "K = np.array([\n",
-    "    [...],\n",
-    "    [...],\n",
+    "    [2*k/m,-k/m],\n",
+    "    [-k/m,2*k/m],\n",
     "])\n",
     "\n",
     "# Initial conditions\n",
-    "X0 = np.array([...])\n",
+    "X0 = np.array([0,0.5])\n",
     "\n",
     "# The analytical solution in matrix notation:\n",
     "def X_matrix(t):\n",
-    "    ...\n",
-    "    Omega = ...\n",
-    "    M0 = ...\n",
+    "    Omega2, V = np.linalg.eig(K)\n",
+    "    Omega = np.sqrt(Omega2)\n",
+    "    M0 = V.T @ X0\n",
     "    M = M0 * np.cos(Omega * t)\n",
-    "    return ..."
+    "    return V @ M"
    ]
   },
   {
@@ -567,12 +580,13 @@
     "\n",
     "# Coupling matrix\n",
     "K = np.array([\n",
-    "    [...],\n",
-    "    [...],\n",
+    "    [ 2*k/m,  -k/m,   0  ],\n",
+    "    [ - k/m, 2*k/m, - k/m],\n",
+    "    [   0  , - k/m, 2*k/m],\n",
     "])\n",
     "\n",
     "# Initial conditions\n",
-    "X0 = np.array([...])\n",
+    "X0 = np.array([0,0,0.5])\n",
     "\n",
     "# The analytical solution in matrix notation:\n",
     "def X_matrix(t):\n",
