--- a/docs/02/notes.ipynb
+++ b/docs/02/notes.ipynb
@@ -139,10 +139,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Binary representation of 10: 0b1010\n"
+     ]
+    }
+   ],
    "source": [
     "# Convert an integer to a binary string\n",
     "number = 10\n",
@@ -152,10 +160,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Integer value of 0b1010: 10\n"
+     ]
+    }
+   ],
    "source": [
     "# Convert a binary string back to an integer\n",
     "binary = \"0b1010\" # the leading \"0b\" is optional\n",
@@ -183,10 +199,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "10",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Binary number: 10\n"
+     ]
+    }
+   ],
    "source": [
     "binary = 0b1010  # 10 in decimal\n",
     "print(f\"Binary number: {binary}\")"
@@ -234,10 +258,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "13",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hexadecimal representation of 255: 0xff\n"
+     ]
+    }
+   ],
    "source": [
     "number = 255\n",
     "hexrep = hex(number)\n",
@@ -246,10 +278,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Integer value of 0xff: 255\n"
+     ]
+    }
+   ],
    "source": [
     "hexrep = \"0xff\"\n",
     "number = int(hexrep, 16)\n",
@@ -258,10 +298,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hexadecimal number: 255\n"
+     ]
+    }
+   ],
    "source": [
     "hexrep = 0xff  # 10 in decimal\n",
     "print(f\"Hexadecimal number: {hexrep}\")"
@@ -501,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "28",
    "metadata": {},
    "outputs": [],
@@ -520,10 +568,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "30",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "# A NOT gate can be built by connecting both inputs of a NAND gate to the same value.\n",
     "def NOT_NAND(a):\n",
@@ -536,10 +593,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "31",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n",
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "# An AND gate can be built by negating the output of a NAND gate.\n",
     "def AND_NAND(a, b):\n",
@@ -554,10 +622,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "32",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "# Using De Morgan's law: A | B = ~(~A & ~B), we can construct an OR gate.\n",
     "def OR_NAND(a, b):\n",
@@ -572,10 +651,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "33",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "# An XOR gate can be built using NAND gates as follows:\n",
     "def XOR_NAND(a, b):\n",
@@ -648,10 +738,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "36",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 0)\n",
+      "(1, 0)\n",
+      "(1, 0)\n",
+      "(0, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "def half_adder(A, B):\n",
     "    S = XOR_NAND(A, B)  # Sum using XOR\n",
@@ -690,10 +791,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "38",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 0)\n",
+      "(1, 0)\n",
+      "(0, 1)\n",
+      "(1, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "def full_adder(A, B, Cin):\n",
     "    s, c = half_adder(A,   B)\n",
@@ -730,10 +842,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "40",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 1, 0, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "def multibit_adder(A, B):\n",
     "    n = len(A)  # Assume A and B are of the same length\n",
@@ -1054,10 +1174,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "56",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# Demonstrate NaN comparison rules\n",
     "\n",
@@ -1198,7 +1337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
