--- a/docs/03/notes.ipynb
+++ b/docs/03/notes.ipynb
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "18",
    "metadata": {},
    "outputs": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "26",
    "metadata": {},
    "outputs": [],
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "27",
    "metadata": {},
    "outputs": [],
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "28",
    "metadata": {},
    "outputs": [
@@ -593,13 +593,13 @@
      "output_type": "stream",
      "text": [
       "Naive Gaussian Elimination:\n",
-      "Solution: [ 1.44187582  1.19066318 -0.92188126]\n",
+      "Solution: [ 1.17573204 -0.68594545  0.74346307]\n",
       "\n",
       "Gaussian Elimination with Partial Pivoting:\n",
-      "Solution: [ 1.44187582  1.19066318 -0.92188126]\n",
+      "Solution: [ 1.17573204 -0.68594545  0.74346307]\n",
       "\n",
       "Numpy's solve:\n",
-      "Solution: [ 1.44187582  1.19066318 -0.92188126]\n"
+      "Solution: [ 1.17573204 -0.68594545  0.74346307]\n"
      ]
     }
    ],
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "30",
    "metadata": {},
    "outputs": [
@@ -653,20 +653,20 @@
      "output_type": "stream",
      "text": [
       "Permutation matrix P:\n",
-      "[[0. 1. 0.]\n",
-      " [0. 0. 1.]\n",
+      "[[0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
       " [1. 0. 0.]]\n",
       "Lower triangular matrix L:\n",
-      "[[1.         0.         0.        ]\n",
-      " [0.35667963 1.         0.        ]\n",
-      " [0.26562609 0.82544982 1.        ]]\n",
+      "[[ 1.          0.          0.        ]\n",
+      " [ 0.37377006  1.          0.        ]\n",
+      " [ 0.1860252  -0.39700941  1.        ]]\n",
       "Upper triangular matrix U:\n",
-      "[[ 0.78738557  0.18447409  0.85674039]\n",
-      " [ 0.          0.77603273  0.61700001]\n",
-      " [ 0.          0.         -0.4513205 ]]\n",
+      "[[ 0.73544641  0.76788346  0.17263373]\n",
+      " [ 0.         -0.18114242  0.42362107]\n",
+      " [ 0.          0.          1.02490783]]\n",
       "\n",
-      "Solution using LU decomposition: [ 1.44187582  1.19066318 -0.92188126]\n",
-      "Check with np.linalg.solve(A, b): [ 1.44187582  1.19066318 -0.92188126]\n"
+      "Solution using LU decomposition: [ 1.17573204 -0.68594545  0.74346307]\n",
+      "Check with np.linalg.solve(A, b): [ 1.17573204 -0.68594545  0.74346307]\n"
      ]
     }
    ],
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "32",
    "metadata": {},
    "outputs": [
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "35",
    "metadata": {},
    "outputs": [],
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "36",
    "metadata": {},
    "outputs": [
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "41",
    "metadata": {},
    "outputs": [],
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "42",
    "metadata": {},
    "outputs": [
@@ -999,10 +999,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "44",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eigenvalues: [7.04891734 2.30797853 2.64310413]\n",
+      "Eigenvectors (columns):\n",
+      " [[ 0.59100905  0.73697623 -0.32798528]\n",
+      " [ 0.32798528 -0.59100905 -0.73697623]\n",
+      " [ 0.73697623 -0.32798528  0.59100905]]\n"
+     ]
+    }
+   ],
    "source": [
     "A = np.array([[4,  1,  2],\n",
     "              [1,  3,  1],\n",
