modified:   docs/08/lab.ipynb 	modified:   docs/07/notes.ipynb 	modified:   docs/08/notes.ipynb

--- a/docs/08/lab.ipynb
+++ b/docs/08/lab.ipynb
@@ -98,19 +98,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# HANDSON: Define the transformed function\n",
     "def ft(t): \n",
-    "    return t / (1 - t)\n"
+    "    x= t / (1 - t)\n",
+    "    xd = 1 / (1 - t) ** 2\n",
+    "    return f(x) * xd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "7",
    "metadata": {},
    "outputs": [],
@@ -124,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "8",
    "metadata": {},
    "outputs": [
@@ -132,9 +134,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Middle Riemann Sum (N=64): 5.122403281472575\n",
+      "Middle Riemann Sum (N=64): 295.6299216556968\n",
       "Exact Integral: 1.5707963267948966\n",
-      "Absolute Error: 3.5516069546776787\n"
+      "Absolute Error: 294.0591253289019\n"
      ]
     }
    ],
