--- a/docs/07/notes.ipynb
+++ b/docs/07/notes.ipynb
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "22",
    "metadata": {},
    "outputs": [],
@@ -339,17 +339,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "23",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7963193e5a30>"
+       "<matplotlib.legend.Legend at 0x7a98b76d4b00>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1323,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "id": "70",
    "metadata": {},
    "outputs": [
@@ -1331,25 +1331,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting jax\n",
-      "  Downloading jax-0.5.0-py3-none-any.whl.metadata (22 kB)\n",
-      "Collecting jaxlib<=0.5.0,>=0.5.0 (from jax)\n",
-      "  Downloading jaxlib-0.5.0-cp312-cp312-manylinux2014_x86_64.whl.metadata (978 bytes)\n",
-      "Collecting ml_dtypes>=0.4.0 (from jax)\n",
-      "  Downloading ml_dtypes-0.5.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (21 kB)\n",
+      "Requirement already satisfied: jax in /usr/local/python/3.12.1/lib/python3.12/site-packages (0.5.0)\n",
+      "Requirement already satisfied: jaxlib<=0.5.0,>=0.5.0 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from jax) (0.5.0)\n",
+      "Requirement already satisfied: ml_dtypes>=0.4.0 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from jax) (0.5.1)\n",
       "Requirement already satisfied: numpy>=1.25 in /home/codespace/.local/lib/python3.12/site-packages (from jax) (2.2.2)\n",
-      "Collecting opt_einsum (from jax)\n",
-      "  Downloading opt_einsum-3.4.0-py3-none-any.whl.metadata (6.3 kB)\n",
+      "Requirement already satisfied: opt_einsum in /usr/local/python/3.12.1/lib/python3.12/site-packages (from jax) (3.4.0)\n",
       "Requirement already satisfied: scipy>=1.11.1 in /home/codespace/.local/lib/python3.12/site-packages (from jax) (1.15.1)\n",
-      "Downloading jax-0.5.0-py3-none-any.whl (2.3 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.3/2.3 MB\u001b[0m \u001b[31m29.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading jaxlib-0.5.0-cp312-cp312-manylinux2014_x86_64.whl (102.0 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m102.0/102.0 MB\u001b[0m \u001b[31m56.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hDownloading ml_dtypes-0.5.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (4.7 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.7/4.7 MB\u001b[0m \u001b[31m43.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading opt_einsum-3.4.0-py3-none-any.whl (71 kB)\n",
-      "Installing collected packages: opt_einsum, ml_dtypes, jaxlib, jax\n",
-      "Successfully installed jax-0.5.0 jaxlib-0.5.0 ml_dtypes-0.5.1 opt_einsum-3.4.0\n",
       "\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3 -m pip install --upgrade pip\u001b[0m\n"
@@ -1362,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "id": "71",
    "metadata": {},
    "outputs": [
@@ -1385,7 +1372,11 @@
     "\n",
     "X  = jnp.linspace(-1,1,num=101)\n",
     "F  = f(X)\n",
-    "Fp = vmap(grad(f))(X)\n",
+    "\n",
+    "fp = grad(f)\n",
+    "fpv = vmap(fp)\n",
+    "\n",
+    "Fp = fpv(X)\n",
     "\n",
     "plt.plot(X, F, lw=5, alpha=0.25)\n",
     "for (x, f, fp) in list(zip(X, F, Fp))[::10]:\n",
