--- a/docs/09/notes.ipynb
+++ b/docs/09/notes.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6",
    "metadata": {},
    "outputs": [],
@@ -98,10 +98,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Approximate root:\n",
+      "  x0  =  1.5213804244995117\n",
+      "f(x0) =  4.265829404825894e-06\n"
+     ]
+    }
+   ],
    "source": [
     "def f(x):\n",
     "    return x**3 - x - 2\n",
@@ -208,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "16",
    "metadata": {},
    "outputs": [],
@@ -227,10 +237,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "17",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Approximate root:\n",
+      "  x0  =  1.5213797068045751\n",
+      "f(x0) =  4.529709940470639e-14\n"
+     ]
+    }
+   ],
    "source": [
     "f  = lambda x: x**3 - x - 2\n",
     "df = lambda x: 3*x**2 - 1\n",
@@ -256,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "19",
    "metadata": {},
    "outputs": [],
@@ -507,7 +527,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -521,7 +541,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
