--- a/docs/11/lab.ipynb
+++ b/docs/11/lab.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8",
    "metadata": {},
    "outputs": [],
@@ -132,8 +132,11 @@
    "outputs": [],
    "source": [
     "def distgen(beta, N=10_000):\n",
+    "    \n",
+    "    gamma = 1 / np.sqrt(1 - beta ** 2)\n",
+    "\n",
     "    # HANDSON: Random angles in [0, pi/2]: uniform in cos(theta)\n",
-    "    pass\n",
+    "    thetas = np.arccos(np.random(0, 1))\n",
     "\n",
     "    # HANDSON: Compute apparent velocity\n",
     "    pass\n",
@@ -201,7 +204,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -215,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
