--- a/docs/12/lab.ipynb
+++ b/docs/12/lab.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7",
    "metadata": {},
    "outputs": [],
@@ -103,25 +103,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# HANDSON: Define range for m (0 to 10 TeV)\n",
-    "ms = pass"
+    "ms = np.linspace(0, 10, 1001)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# HANDSON: Gaussian likelihood\n",
     "def likelihood(x, x0, sigma):\n",
-    "    pass"
+    "    norm = 1.0 / (np.sqrt(2*np.pi) * sigma)\n",
+    "    return norm * np.exp(-0.5 * ((x-x0) / sigma)**2)"
    ]
   },
   {
@@ -142,7 +143,7 @@
     "\n",
     "    # HANDSON: By running an experiment, we obtain a single measurement\n",
     "    # You may use np.random.normal().\n",
-    "    m_obs = pass\n",
+    "    m_obs = \n",
     "    \n",
     "    # HANDSON: Posterior ~ prior * likelihood\n",
     "    pass\n",
@@ -332,7 +333,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -346,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
