--- a/docs/12/notes.ipynb
+++ b/docs/12/notes.ipynb
@@ -710,10 +710,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "47",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Define range for m (0 to 10 TeV)\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m ms \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39mlinspace(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m1001\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Uniform prior in [2, 8]\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mprior0\u001b[39m(ms, m_min\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m, m_max\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m8\u001b[39m):\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;66;03m# Uniform in [2,8], zero outside\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Define range for m (0 to 10 TeV)\n",
     "ms = np.linspace(0, 10, 1001)\n",
@@ -1143,7 +1155,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1157,7 +1169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
