--- a/docs/14/lab.ipynb
+++ b/docs/14/lab.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,22 @@
     "    X : np.ndarray\n",
     "        Approximate solutions at each step, shape (n+1, len(x)).\n",
     "    \"\"\"\n",
-    "    pass"
+    "    T = np.array(t)\n",
+    "    X = np.array(x)\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        k1 = dt * np.array(f(*(x         )))\n",
+    "        k2 = dt * np.array(f(*(x + 0.5*k1)))\n",
+    "        k3 = dt * np.array(f(*(x + 0.5*k2)))\n",
+    "        k4 = dt * np.array(f(*(x +     k3)))\n",
+    "        \n",
+    "        t += dt\n",
+    "        x += k1/6 + k2/3 + k3/3 + k4/6\n",
+    "        \n",
+    "        T = np.append( T, t)\n",
+    "        X = np.vstack((X, x))\n",
+    "        \n",
+    "    return T, X"
    ]
   },
   {
@@ -290,7 +305,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -304,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
