--- a/docs/15/lab.ipynb
+++ b/docs/15/lab.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6",
    "metadata": {},
    "outputs": [],
@@ -97,10 +97,15 @@
     "\n",
     "    for i in range(n):\n",
     "        k1 = dt * np.array(f(X[-1]         ))\n",
-    "        ...\n",
+    "        k2 = dt * np.array(f(X[-1] + 0.5*k1))\n",
+    "        k3 = dt * np.array(f(X[-1] + 0.5*k2))\n",
+    "        k4 = dt * np.array(f(X[-1] +     k3))\n",
+    "\n",
+    "        t0 += dt\n",
+    "        x0 += k1/6 + k2/3 + k3/3 + k4/6\n",
     "\n",
     "        T.append(T[-1] + dt)\n",
-    "        X.append(...)\n",
+    "        X.append(X[-1] + x0)\n",
     "\n",
     "    return np.array(T), np.array(X)"
    ]
@@ -351,7 +356,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -365,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
