--- a/docs/19/notes.ipynb
+++ b/docs/19/notes.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "14",
    "metadata": {},
    "outputs": [],
@@ -233,13 +233,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "16",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ising' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# HANDSON: choose different i and j and compute the energy change by calling `energy_change(state, i, j)`\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m energy_change(\u001b[43mising\u001b[49m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ising' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# HANDSON: choose different i and j and compute the energy change by calling `energy_change(state, i, j)`\n",
-    "\n"
+    "\n",
+    "energy_change(ising, 1, 2)"
    ]
   },
   {
@@ -927,7 +940,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -941,7 +954,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
